--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Morrison's Todo List</h1>
+        <h1>My Todo List</h1>
     </header>
     
     <form action="">
